--- a/todo.css
+++ b/todo.css
@@ -9,6 +9,7 @@ body {
     min-height: 100px;
     flex-direction: column;
     padding-top: 5%;
+    background-color: rgb(167, 230, 226);
 }
 
 .todo-list{
@@ -37,9 +38,9 @@ body {
     margin-left: 10px;
     border-radius: 20px;
     border: 1px solid grey;
-    height: 15px;
-    width: 15px;
-    font-size: 7px;
+    height: 18px;
+    width: 18px;
+    font-size: 8px;
     padding:0;
 }
 
@@ -54,14 +55,18 @@ body {
 }
 
 #buttonContainer{
-    margin-top: 10px;
+    margin-top:15px;
 }
 
 #addButton{
-    background-color: pink;
-    border: 1px solid pink;
+    background-color: rgb(192, 246, 255);
+    border: 1px solid rgb(71, 167, 231);
     border-radius: 40px;
     padding: 5px 20px;
+}
+
+#addButton:hover{
+    border: 2px solid #144E75; 
 }
 
 .done-task{
@@ -71,4 +76,19 @@ body {
 h2{
     text-align: center;
     font-size: 1.25rem;
+}
+
+.priority-1 { 
+    border-left: 5px solid red;
+    background-color: #ffe5e5;
+}
+
+.priority-2 { 
+    border-left: 5px solid orange;
+    background-color: #fff4cc;
+}
+
+.priority-3 { 
+    border-left: 5px solid green;
+    background-color: #e5ffe5;
 }
